# Order Info M    lotteria/lotteria.xcodeproj/project.pbxproj M    lotteria/TemplateCell/ShippingCell.xib M    lotteria/TemplateCell/UITableViewCellTemplate.h A    lotteria/TemplateCell/UIViewControllerTemplate.m M    lotteria/TemplateCell/UITableViewCellTemplate.m A    lotteria/TemplateCell/UIViewControllerTemplate.h M    lotteria/Classes/MyPageBody/MyCustomerDelivery.h M    lotteria/Classes/MyPageBody/LoginViewController.m M    lotteria/Classes/MyPageBody/LoginView.xib M    lotteria/Classes/MyPageBody/MypageBodyViewController.h M    lotteria/Classes/MyPageBody/MyCustomerDelivery.m M    lotteria/Classes/MyPageBody/MypageBodyViewController.m M    lotteria/Classes/MyPageBody/MypageBodyView.xib M    lotteria/Classes/MyPageBody/MyCustomerDelivery.xib M    lotteria/Classes/MyPageBody/LoginViewController.h A    lotteria/Classes/DataList.m M    lotteria/Classes/CartBody/CartOrderViewController.m M    lotteria/Classes/CartBody/CartBodyView.xib A    lotteria/Classes/CartBody/OrderViewController.xib M    lotteria/Classes/CartBody/CartBodyViewController.h A    lotteria/Classes/CartBody/OrderViewController.h M    lotteria/Classes/CartBody/CartOrderUserView.xib M    lotteria/Classes/CartBody/CartOrderView.xib M    lotteria/Classes/CartBody/CartBodyViewController.m A    lotteria/Classes/CartBody/OrderViewController.m M    lotteria/Classes/CartBody/CartOrderUserViewController.h M    lotteria/Classes/CartBody/CartOrderViewController.h M    lotteria/Classes/CartBody/CartOrderUserViewController.m M    lotteria/Classes/MainViewController.h A    lotteria/Classes/DataList.h M    lotteria/Classes/MainViewController.m

--- a/lotteria/Classes/CartBody/CartOrderView.xib
+++ b/lotteria/Classes/CartBody/CartOrderView.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="1"/>
+			<integer value="12"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -42,22 +42,10 @@
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIImageView" id="1054955234">
-						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">274</int>
-						<string key="NSFrameSize">{320, 460}</string>
-						<reference key="NSSuperview" ref="191373211"/>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">bg_content.png</string>
-						</object>
-					</object>
 					<object class="IBUIButton" id="539297347">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 20}, {268, 189}}</string>
+						<string key="NSFrame">{{20, 34}, {268, 189}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -88,7 +76,7 @@
 					<object class="IBUIButton" id="448674024">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{26, 217}, {268, 189}}</string>
+						<string key="NSFrame">{{26, 218}, {268, 189}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -104,6 +92,21 @@
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">btn_time_order_on.png</string>
+						</object>
+					</object>
+					<object class="IBUINavigationBar" id="372441862">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">290</int>
+						<string key="NSFrameSize">{320, 44}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSArray" key="IBUIItems">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBUINavigationItem" id="30465817">
+								<reference key="IBUINavigationBar" ref="372441862"/>
+								<string key="IBUITitle">주문방법 선택</string>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 						</object>
 					</object>
 				</object>
@@ -165,6 +168,14 @@
 					</object>
 					<int key="connectionID">11</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">topBar</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="372441862"/>
+					</object>
+					<int key="connectionID">14</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -180,9 +191,9 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="1054955234"/>
 							<reference ref="539297347"/>
 							<reference ref="448674024"/>
+							<reference ref="372441862"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -198,11 +209,6 @@
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">4</int>
-						<reference key="object" ref="1054955234"/>
-						<reference key="parent" ref="191373211"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
 						<reference key="object" ref="539297347"/>
 						<reference key="parent" ref="191373211"/>
@@ -211,6 +217,20 @@
 						<int key="objectID">6</int>
 						<reference key="object" ref="448674024"/>
 						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">12</int>
+						<reference key="object" ref="372441862"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="30465817"/>
+						</object>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">13</int>
+						<reference key="object" ref="30465817"/>
+						<reference key="parent" ref="372441862"/>
 					</object>
 				</object>
 			</object>
@@ -222,7 +242,8 @@
 					<string>-2.CustomClassName</string>
 					<string>1.IBEditorWindowLastContentRect</string>
 					<string>1.IBPluginDependency</string>
-					<string>4.IBPluginDependency</string>
+					<string>12.IBPluginDependency</string>
+					<string>13.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
 					<string>5.IBViewBoundsToFrameTransform</string>
 					<string>6.IBPluginDependency</string>
@@ -232,7 +253,8 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>CartOrderViewController</string>
 					<string>UIResponder</string>
-					<string>{{556, 276}, {320, 480}}</string>
+					<string>{{424, 276}, {320, 480}}</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -241,7 +263,7 @@
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
-						<bytes key="NSTransformStruct">P4AAAL+AAABB0AAAw8yAAA</bytes>
+						<bytes key="NSTransformStruct">P4AAAL+AAABB0AAAw8oAAA</bytes>
 					</object>
 				</object>
 			</object>
@@ -261,14 +283,14 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">11</int>
+			<int key="maxID">14</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">CartOrderViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">UITableViewControllerTemplate</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">OrderButton:</string>
 						<string key="NS.object.0">id</string>
@@ -315,6 +337,25 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/CartBody/CartOrderViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UITableViewControllerTemplate</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">topBar</string>
+						<string key="NS.object.0">UINavigationBar</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">topBar</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">topBar</string>
+							<string key="candidateClassName">UINavigationBar</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">TemplateCell/UITableViewControllerTemplate.h</string>
 					</object>
 				</object>
 			</object>
@@ -412,6 +453,22 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">UIBarButtonItem</string>
+					<string key="superclassName">UIBarItem</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIBarButtonItem.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIBarItem</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIBarItem.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">UIButton</string>
 					<string key="superclassName">UIControl</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -428,12 +485,17 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">UIImageView</string>
+					<string key="className">UINavigationBar</string>
 					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="140320138">
 						<string key="majorKey">IBFrameworkSource</string>
-						<string key="minorKey">UIKit.framework/Headers/UIImageView.h</string>
+						<string key="minorKey">UIKit.framework/Headers/UINavigationBar.h</string>
 					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UINavigationItem</string>
+					<string key="superclassName">NSObject</string>
+					<reference key="sourceIdentifier" ref="140320138"/>
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">UIResponder</string>
@@ -533,13 +595,11 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>bg_content.png</string>
 				<string>btn_general_order_on.png</string>
 				<string>btn_time_order_on.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>{320, 507}</string>
 				<string>{268, 189}</string>
 				<string>{268, 190}</string>
 			</object>
