--- a/lotteria/Classes/MyPageBody/MypageBodyView.xib
+++ b/lotteria/Classes/MyPageBody/MypageBodyView.xib
@@ -127,6 +127,14 @@
 					</object>
 					<int key="connectionID">78</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">topBar</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="227736977"/>
+					</object>
+					<int key="connectionID">79</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -200,7 +208,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>MypageBodyViewController</string>
 					<string>UIResponder</string>
-					<string>{{523, 118}, {320, 460}}</string>
+					<string>{{594, 166}, {320, 460}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -229,14 +237,14 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">78</int>
+			<int key="maxID">79</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">MypageBodyViewController</string>
-					<string key="superclassName">UIViewController</string>
+					<string key="superclassName">UITableViewControllerTemplate</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">OrderListButton</string>
 						<string key="NS.object.0">id</string>
@@ -262,6 +270,25 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/MyPageBody/MypageBodyViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UITableViewControllerTemplate</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">topBar</string>
+						<string key="NS.object.0">UINavigationBar</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">topBar</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">topBar</string>
+							<string key="candidateClassName">UINavigationBar</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">TemplateCell/UITableViewControllerTemplate.h</string>
 					</object>
 				</object>
 			</object>
